--- a/wild fires/WF_1.ipynb
+++ b/wild fires/WF_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "a616861e",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "ffb37164",
    "metadata": {},
    "outputs": [],
@@ -27,17 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "6b68cd72",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Connection at 0x1d4e659d210>"
+       "<sqlite3.Connection at 0x1c50ae91300>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "67b6374c",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "7f9b8d76",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "26          NWCG_UnitIDActive_20170109"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "4389a410",
    "metadata": {},
    "outputs": [],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "ce3ab58f",
    "metadata": {},
    "outputs": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "c17896f5",
    "metadata": {},
    "outputs": [
@@ -800,7 +800,13 @@
       "11.0     14448\n",
       "10.0     11500\n",
       "12.0      3796\n",
-      "Name: STAT_CAUSE_CODE, dtype: int64\n",
+      "Name: STAT_CAUSE_CODE, dtype: int64\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "STAT_CAUSE_DESCR:\n",
       "Debris Burning       429028\n",
@@ -844,13 +850,7 @@
       "358.0     552\n",
       "359.0     523\n",
       "366.0     135\n",
-      "Name: CONT_DOY, Length: 366, dtype: int64\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Name: CONT_DOY, Length: 366, dtype: int64\n",
       "\n",
       "CONT_TIME:\n",
       "1800    38078\n",
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "1d958d99",
    "metadata": {},
    "outputs": [
@@ -1293,7 +1293,7 @@
        "[5 rows x 39 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "de15ae4d",
    "metadata": {},
    "outputs": [
@@ -1860,7 +1860,7 @@
        "Shape                       b'\\x00\\x01\\xad\\x10\\x00\\x00@\\xe3\\xaa.\\xb7\\xfb]\\...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1871,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "7def5d59",
    "metadata": {},
    "outputs": [
@@ -1881,7 +1881,7 @@
        "(1880465, 39)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1892,7 +1892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "6738fd8d",
    "metadata": {},
    "outputs": [
@@ -1941,7 +1941,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1960,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "7dfdaa41",
    "metadata": {},
    "outputs": [
@@ -1985,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "a7f7242c",
    "metadata": {},
    "outputs": [],
@@ -1995,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "e8f9d9ba",
    "metadata": {},
    "outputs": [
@@ -2023,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "7c33e99b",
    "metadata": {},
    "outputs": [
@@ -2056,7 +2056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "5ebc653a",
    "metadata": {},
    "outputs": [],
@@ -2066,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "95c9cb1a",
    "metadata": {},
    "outputs": [
@@ -2130,7 +2130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "88a0f886",
    "metadata": {},
    "outputs": [
@@ -2159,7 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "430e2a68",
    "metadata": {},
    "outputs": [
@@ -2185,7 +2185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "201c309c",
    "metadata": {},
    "outputs": [
@@ -2232,7 +2232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "8a5f42c8",
    "metadata": {},
    "outputs": [],
@@ -2242,7 +2242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "32c47429",
    "metadata": {},
    "outputs": [],
@@ -2254,7 +2254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "5792fe21",
    "metadata": {},
    "outputs": [],
@@ -2264,7 +2264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "e6feaad1",
    "metadata": {},
    "outputs": [
@@ -2293,7 +2293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "bdfba57f",
    "metadata": {},
    "outputs": [
@@ -2323,7 +2323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "2666c876",
    "metadata": {},
    "outputs": [],
@@ -2339,7 +2339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "ce1048ec",
    "metadata": {},
    "outputs": [],
@@ -2350,7 +2350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "92cc254b",
    "metadata": {},
    "outputs": [],
@@ -2370,7 +2370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "id": "60af4e46",
    "metadata": {},
    "outputs": [],
@@ -2381,7 +2381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "id": "30f83a78",
    "metadata": {},
    "outputs": [
@@ -2424,7 +2424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "id": "88946cc2",
    "metadata": {},
    "outputs": [
@@ -2455,7 +2455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "id": "fb2d6d23",
    "metadata": {},
    "outputs": [
@@ -2482,7 +2482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "id": "4193c7e7",
    "metadata": {},
    "outputs": [],
@@ -2493,7 +2493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "id": "e0413791",
    "metadata": {},
    "outputs": [
@@ -2549,7 +2549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "id": "cd4b9171",
    "metadata": {},
    "outputs": [
@@ -2596,7 +2596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "id": "c2373ad7",
    "metadata": {},
    "outputs": [],
@@ -2614,7 +2614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "id": "bd73081e",
    "metadata": {},
    "outputs": [],
@@ -2624,7 +2624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "id": "825ff2c8",
    "metadata": {},
    "outputs": [
@@ -2654,7 +2654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "id": "71f4dca8",
    "metadata": {},
    "outputs": [
@@ -2685,6 +2685,149 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f6b1b594",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "4429b8ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import pandas as pd\n",
+    "\n",
+    "# # Assuming fires_data is your DataFrame and columns are correctly formatted\n",
+    "# fires_data['DISCOVERY_DATETIME'] = pd.to_datetime(fires_data['DISCOVERY_DATE'])\n",
+    "# fires_data['CONT_DATETIME'] = pd.to_datetime(fires_data['CONT_DATE'])\n",
+    "# fires_data['DURATION'] = (fires_data['CONT_DATETIME'] - fires_data['DISCOVERY_DATETIME']).dt.days\n",
+    "# # \n",
+    "# # Analyze Duration Distribution\n",
+    "# fires_data['DURATION'].hist(bins=50)\n",
+    "# plt.title('Distribution of Fire Durations')\n",
+    "# plt.xlabel('Duration (Days)')\n",
+    "# plt.ylabel('Frequency')\n",
+    "# plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "31f540e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import matplotlib.pyplot as plt\n",
+    "\n",
+    "# # Assuming 'DURATION' is calculated as (CONT_DATETIME - DISCOVERY_DATETIME)\n",
+    "# fires_data['DURATION'].hist(bins=30, color='skyblue')\n",
+    "# plt.title('Distribution of Fire Durations')\n",
+    "# plt.xlabel('Duration (Days)')\n",
+    "# plt.ylabel('Number of Fires')\n",
+    "# plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "499ac63f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Assuming 'Season' is already calculated\n",
+    "# fires_by_season = fires_data['Season'].value_counts()\n",
+    "# fires_by_season.plot(kind='pie', autopct='%1.1f%%', startangle=140, colors=['#ff9999','#66b3ff','#99ff99','#ffcc99'])\n",
+    "# plt.title('Fire Occurrences by Season')\n",
+    "# plt.ylabel('')  # Hide the y-label as it's not needed for pie charts\n",
+    "# plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "06e7667f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fires_data['DISCOVERY_DATE'] = pd.to_datetime(fires_data['DISCOVERY_DATE'])\n",
+    "# fires_data['CONT_DATE'] = pd.to_datetime(fires_data['CONT_DATE'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "4ab73eef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Define a function to convert HHMM to a time format\n",
+    "# def convert_to_time(hhmm):\n",
+    "#     if pd.isnull(hhmm) or hhmm == '':\n",
+    "#         return None\n",
+    "#     try:\n",
+    "#         return pd.to_datetime(hhmm, format='%H%M').time()\n",
+    "#     except ValueError:  # in case of incorrect format\n",
+    "#         return None\n",
+    "\n",
+    "# fires_data['DISCOVERY_TIME'] = fires_data['DISCOVERY_TIME'].apply(convert_to_time)\n",
+    "# fires_data['CONT_TIME'] = fires_data['CONT_TIME'].apply(convert_to_time)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "910f991b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # This step might not be necessary unless you're cleaning or mapping the descriptions\n",
+    "# fires_data['STAT_CAUSE_DESCR'] = fires_data['STAT_CAUSE_DESCR'].astype('category')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "e82d65ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Assuming '00:00' as the default time for missing DISCOVERY_TIME and CONT_TIME\n",
+    "# fires_data['DISCOVERY_TIME'] = fires_data['DISCOVERY_TIME'].fillna('00:00')\n",
+    "# fires_data['CONT_TIME'] = fires_data['CONT_TIME'].fillna('00:00')\n",
+    "\n",
+    "\n",
+    "# # Combine DISCOVERY_DATE and DISCOVERY_TIME into a full datetime (if times are converted to datetime.time)\n",
+    "# fires_data['DISCOVERY_DATETIME'] = pd.to_datetime(fires_data['DISCOVERY_DATE'].astype(str) + ' ' + fires_data['DISCOVERY_TIME'].astype(str))\n",
+    "\n",
+    "# # Do the same for CONT_DATE and CONT_TIME\n",
+    "# fires_data['CONT_DATETIME'] = pd.to_datetime(fires_data['CONT_DATE'].astype(str) + ' ' + fires_data['CONT_TIME'].astype(str))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71776130",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# An example of setting a default date for missing values\n",
+    "default_date = '1900-01-01'  # Example default date, adjust as needed\n",
+    "fires_data['DISCOVERY_DATE'] = fires_data['DISCOVERY_DATE'].fillna(default_date)\n",
+    "fires_data['CONT_DATE'] = fires_data['CONT_DATE'].fillna(default_date)\n",
+    "\n",
+    "# Then proceed with filling missing times and combining\n",
+    "fires_data['DISCOVERY_TIME'] = fires_data['DISCOVERY_TIME'].fillna('00:00')\n",
+    "fires_data['CONT_TIME'] = fires_data['CONT_TIME'].fillna('00:00')\n",
+    "\n",
+    "fires_data['DISCOVERY_DATETIME'] = pd.to_datetime(fires_data['DISCOVERY_DATE'].astype(str) + ' ' + fires_data['DISCOVERY_TIME'])\n",
+    "fires_data['CONT_DATETIME'] = pd.to_datetime(fires_data['CONT_DATE'].astype(str) + ' ' + fires_data['CONT_TIME'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "231e1061",
    "metadata": {},
    "outputs": [],
    "source": []
